--- a/Lib_Base/src/main/AndroidManifest.xml
+++ b/Lib_Base/src/main/AndroidManifest.xml
@@ -1,5 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.quyunshuo.base">
-
-    /
-</manifest>
+<manifest package="com.quyunshuo.base" />
