--- a/Lib_Main/src/main/java/debug/AndroidManifest.xml
+++ b/Lib_Main/src/main/java/debug/AndroidManifest.xml
@@ -3,10 +3,10 @@
     package="com.quyunshuo.main">
 
     <application
-        android:name="com.quyunshuo.base.BaseApplication"
+        android:name="com.quyunshuo.common.CommonApplication"
         android:allowBackup="true"
         android:label="@string/main_app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/base_AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
