--- a/Lib_Base/build.gradle
+++ b/Lib_Base/build.gradle
@@ -28,6 +28,10 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 
+    buildFeatures {
+        viewBinding = true
+    }
+
     resourcePrefix "base_"
 }
 
