--- a/Lib_Main/src/main/java/debug/AndroidManifest.xml
+++ b/Lib_Main/src/main/java/debug/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.quyunshuo.main">
 
     <application
-        android:name="com.quyunshuo.common.CommonApplication"
+        android:name="debug.MainApplication"
         android:allowBackup="true"
         android:label="@string/main_app_name"
         android:theme="@style/base_AppTheme">
