Modify: 基类进一步封装

--- a/Lib_Base/build.gradle
+++ b/Lib_Base/build.gradle
@@ -63,7 +63,7 @@ dependencies {
     api GitHub.RetrofitConverterGson
     api GitHub.Gson
     api GitHub.MMKV
-    api GitHub.AutoSize
+//    api GitHub.AutoSize
     api GitHub.Glide
     api GitHub.ARoute
     api GitHub.RecyclerViewAdapter
