--- a/Lib_Base/build.gradle
+++ b/Lib_Base/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     api GitHub.Glide
     api GitHub.ARoute
     api GitHub.RecyclerViewAdapter
+    api GitHub.StatusBar
 
     kapt GitHub.GlideCompiler
     kapt GitHub.ARouteCompiler
