--- a/Lib_Main/src/main/AndroidManifest.xml
+++ b/Lib_Main/src/main/AndroidManifest.xml
@@ -3,7 +3,10 @@
     package="com.quyunshuo.main">
 
     <application>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity2"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="sensorLandscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
