--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/base_AppTheme" />
+        android:theme="@style/base_AppTheme">
+<!--        &lt;!&ndash; 屏幕适配基准DP &ndash;&gt;-->
+<!--        <meta-data-->
+<!--            android:name="design_width_in_dp"-->
+<!--            android:value="640" />-->
+<!--        <meta-data-->
+<!--            android:name="design_height_in_dp"-->
+<!--            android:value="400" />-->
+    </application>
 
 </manifest>
