--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/base_AppTheme">
-<!--        &lt;!&ndash; 屏幕适配基准DP &ndash;&gt;-->
-<!--        <meta-data-->
-<!--            android:name="design_width_in_dp"-->
-<!--            android:value="640" />-->
+        <!-- 屏幕适配基准DP -->
+        <meta-data
+            android:name="design_width_in_dp"
+            android:value="360" />
+        <meta-data
+            android:name="design_height_in_dp"
+            android:value="640" />
 <!--        <meta-data-->
 <!--            android:name="design_height_in_dp"-->
 <!--            android:value="400" />-->
