Modify: 异常上报、权限申请

--- a/Lib_Base/build.gradle
+++ b/Lib_Base/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     api AndroidX.ConstraintLayout
     api AndroidX.ActivityKtx
     api AndroidX.FragmentKtx
+    api AndroidX.MultiDex
 
     api Kotlin.Kotlin
     api Kotlin.CoroutinesCore
@@ -69,6 +70,8 @@ dependencies {
     api GitHub.RecyclerViewAdapter
     api GitHub.StatusBar
     api GitHub.EventBus
+    api GitHub.Bugly
+    api GitHub.PermissionX
 
     kapt GitHub.GlideCompiler
     kapt GitHub.ARouteCompiler
