--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,11 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/base_AppTheme">
+        android:theme="@style/base_AppTheme"
+        tools:ignore="UnusedAttribute">
         <!-- 屏幕适配基准DP -->
         <meta-data
             android:name="design_width_in_dp"
@@ -26,9 +28,9 @@
         <meta-data
             android:name="design_height_in_dp"
             android:value="640" />
-<!--        <meta-data-->
-<!--            android:name="design_height_in_dp"-->
-<!--            android:value="400" />-->
+        <!--        <meta-data-->
+        <!--            android:name="design_height_in_dp"-->
+        <!--            android:value="400" />-->
     </application>
 
 </manifest>
