--- a/Lib_Base/build.gradle
+++ b/Lib_Base/build.gradle
@@ -76,4 +76,6 @@ dependencies {
     kapt GitHub.GlideCompiler
     kapt GitHub.ARouteCompiler
     kapt GitHub.EventBusAPT
+
+    debugImplementation GitHub.Chuck
 }
