--- a/Lib_Common/build.gradle
+++ b/Lib_Common/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     kapt GitHub.GlideCompiler
     kapt GitHub.ARouteCompiler
     kapt GitHub.EventBusAPT
+
+    debugImplementation GitHub.Chuck
 }
