--- a/Lib_Base/build.gradle
+++ b/Lib_Base/build.gradle
@@ -77,5 +77,7 @@ dependencies {
     kapt GitHub.ARouteCompiler
     kapt GitHub.EventBusAPT
 
-    debugImplementation GitHub.Chuck
+    debugApi GitHub.Chuck
+    debugApi GitHub.LeakCanary
+    releaseApi GitHub.ChuckNo
 }
