--- a/Lib_Main/src/main/java/debug/AndroidManifest.xml
+++ b/Lib_Main/src/main/java/debug/AndroidManifest.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.quyunshuo.main">
+
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:name="debug.MainApplication"
         android:allowBackup="true"
         android:label="@string/main_app_name"
-        android:theme="@style/base_AppTheme">
+        android:networkSecurityConfig="@xml/base_network_security_config"
+        android:theme="@style/base_AppTheme"
+        tools:ignore="UnusedAttribute">
         <activity
             android:name=".ui.splash.SplashActivity"
             android:theme="@style/main_AppTheme.Splash">
