--- a/Lib_Base/src/main/AndroidManifest.xml
+++ b/Lib_Base/src/main/AndroidManifest.xml
@@ -1,1 +1,7 @@
-<manifest package="com.quyunshuo.base" />
+<manifest package="com.quyunshuo.base"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <application>
+
+    </application>
+</manifest>
