--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,15 @@
         android:supportsRtl="true"
         android:theme="@style/base_AppTheme"
         tools:ignore="UnusedAttribute">
+        <activity
+            android:name="com.quyunshuo.base.mvvm.v.MyActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/base_AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <!-- 屏幕适配基准DP -->
         <meta-data
             android:name="design_width_in_dp"
