反射初始化ViewBinding和ViewModel

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,9 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
