--- a/Lib_Common/build.gradle
+++ b/Lib_Common/build.gradle
@@ -2,20 +2,23 @@ import com.quyunshuo.androidbaseframemvvm.build.*
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion BuildConfig.compileSdkVersion
-    buildToolsVersion BuildConfig.buildToolsVersion
+    compileSdkVersion ProjectBuildConfig.compileSdkVersion
+    buildToolsVersion ProjectBuildConfig.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion BuildConfig.minSdkVersion
-        targetSdkVersion BuildConfig.targetSdkVersion
-        versionCode BuildConfig.versionCode
-        versionName BuildConfig.versionName
+        minSdkVersion ProjectBuildConfig.minSdkVersion
+        targetSdkVersion ProjectBuildConfig.targetSdkVersion
+        versionCode ProjectBuildConfig.versionCode
+        versionName ProjectBuildConfig.versionName
         testInstrumentationRunner AndroidX.AndroidJUnitRunner
         consumerProguardFiles "consumer-rules.pro"
+
+        // 相关自定义配置
+        resValue "string", "VERSION_STATUS", ProjectBuildConfig.versionStatus
+        resValue "string", "BUGLY_APP_ID", SDKKeyConfig.BUGLY_APP_ID
     }
 
     compileOptions {
