--- a/Lib_Base/build.gradle
+++ b/Lib_Base/build.gradle
@@ -1,7 +1,7 @@
 import com.quyunshuo.androidbaseframemvvm.build.*
 
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
 }
