--- a/Lib_Common/build.gradle
+++ b/Lib_Common/build.gradle
@@ -1,8 +1,10 @@
 import com.quyunshuo.androidbaseframemvvm.build.*
 
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+}
 
 android {
     compileSdkVersion ProjectBuildConfig.compileSdkVersion
