1：增加AndroidManifest 合并替换标签 2：增加isAppMode 判断

--- a/buildGradleScript/base/base_module.gradle
+++ b/buildGradleScript/base/base_module.gradle
@@ -4,7 +4,12 @@
 
 import com.quyunshuo.androidbaseframemvvm.buildsrc.*
 
-apply plugin: 'com.android.library'
+if (ProjectBuildConfig.isAppMode){
+    apply plugin: 'com.android.application'
+}else {
+    apply plugin: 'com.android.library'
+}
+
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
