fix: 去除app包清单文件默认replace，会导致运行失败

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/base_AppTheme"
-        tools:ignore="UnusedAttribute"
-        tools:replace="android:name,android:label,android:icon, android:theme,android:allowBackup">
+        tools:ignore="UnusedAttribute">
 
         <!-- 屏幕适配基准DP -->
         <meta-data
