--- a/buildGradleScript/lib_common.gradle
+++ b/buildGradleScript/lib_common.gradle
@@ -31,4 +31,5 @@ dependencies {
     kapt DependencyConfig.GitHub.ARouteCompiler
     kapt DependencyConfig.GitHub.EventBusAPT
     kapt DependencyConfig.GitHub.AutoServiceAnnotations
+    kapt DependencyConfig.JetPack.LifecycleCompilerAPT
 }
