--- a/buildGradleScript/base/base_module.gradle
+++ b/buildGradleScript/base/base_module.gradle
@@ -85,4 +85,5 @@ dependencies {
     kapt DependencyConfig.GitHub.ARouteCompiler
     kapt DependencyConfig.GitHub.EventBusAPT
     kapt DependencyConfig.GitHub.AutoServiceAnnotations
+    kapt DependencyConfig.JetPack.LifecycleCompilerAPT
 }
