--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath ProjectPluginManager.AndroidToolsPlugin
         classpath ProjectPluginManager.KotlinPlugin
         classpath ProjectPluginManager.ARouterRegister
+        classpath ProjectPluginManager.HiltPlugin
     }
 }
 
@@ -18,6 +19,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 }
 
