--- a/buildGradleScript/base/base_lib.gradle
+++ b/buildGradleScript/base/base_lib.gradle
@@ -7,6 +7,7 @@ import com.quyunshuo.androidbaseframemvvm.buildsrc.*
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion ProjectBuildConfig.compileSdkVersion
