--- a/buildGradleScript/lib_common.gradle
+++ b/buildGradleScript/lib_common.gradle
@@ -27,9 +27,13 @@ dependencies {
     api project(path: ':lib_base')
     api project(path: ':lib_net')
 
+    api DependencyConfig.JetPack.HiltCore
+
     kapt DependencyConfig.GitHub.GlideCompiler
     kapt DependencyConfig.GitHub.ARouteCompiler
     kapt DependencyConfig.GitHub.EventBusAPT
     kapt DependencyConfig.GitHub.AutoServiceAnnotations
+    kapt DependencyConfig.JetPack.HiltApt
+    kapt DependencyConfig.JetPack.HiltAndroidx
     kapt DependencyConfig.JetPack.LifecycleCompilerAPT
 }
