--- a/lib_common/src/main/AndroidManifest.xml
+++ b/lib_common/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
-    <application android:name="com.quyunshuo.androidbaseframemvvm.base.app.BaseApplication">
+    <application>
 
         <!-- 屏幕适配基准DP -->
         <meta-data
