--- a/module_home/src/main/AndroidManifest.xml
+++ b/module_home/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.InternalPagerActivity" />
     </application>
 
 </manifest>
