refactor(frame): 优化基类，添加请求状态的支持

--- a/module_home/src/main/AndroidManifest.xml
+++ b/module_home/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application>
         <!--  Main 首页  -->
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
