--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -17,6 +17,7 @@ android {
     }
 
     resourcePrefix "common_"
+    namespace 'com.quyunshuo.androidbaseframemvvm.common'
 }
 
 dependencies {
@@ -30,6 +31,5 @@ dependencies {
     kapt DependencyConfig.GitHub.EventBusAPT
     kapt DependencyConfig.GitHub.AutoServiceAnnotations
     kapt DependencyConfig.JetPack.HiltApt
-    kapt DependencyConfig.JetPack.HiltAndroidx
     kapt DependencyConfig.JetPack.LifecycleCompilerAPT
 }
