--- a/module_home/src/main/AndroidManifest.xml
+++ b/module_home/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.quyunshuo.module.home">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
         <!--  Main 首页  -->
-        <activity android:name=".activity.MainActivity">
+        <activity
+            android:name=".activity.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
